removed  variable because it was redundant, changed -color to , -to-date-color to , -color to  per comments and feedback on last PR

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,10 +19,9 @@ $header-color: #6a6e72;
 $footer-background-color: rgb(224, 224, 224);
 $footer-link-color: #777; 
 $not-started-color: $purple;
-$partial-color: $blue;
-$up-to-date-color: $green;
-$raw: #258bd1;
-$highlight-color: $pink;
+$partial-color: $pink;
+$up-to-date-color: $blue;
+$highlight-color: $green;
 $primary-elec-color: $purple;
 $special-primary-elec-color: $light-purple;
 $general-elec-color: $blue;
