--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,16 @@
 ---
 ---
 
+@import 'base';
+@import 'modern';
+@import 'github-integration';
+@import 'github-activity';
+@import 'homepage';
+@import 'about';
+@import 'get-involved';
+@import 'faq';
 @import 'font';
 @import 'stateface';
-@import 'base';
 @import 'header';
 @import 'footer';
 @import 'people';
