--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,26 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ page.title }} | OpenElections: Certified election results. For everyone.</title>
+<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}: {{ site.description }}</title>
 
+<!-- SEO -->
+{% seo %}
+
+<!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/img/icon/favicon.ico">
 
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-<link href="//cdnjs.cloudflare.com/ajax/libs/d3/4.4.0/d3.min.js" rel="javacript">
+<!-- Bootstrap 5 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- D3.js -->
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
+<!-- Custom page stylesheets -->
 {% for src in page.stylesheets %}
 <link href="{{ src }}" rel="stylesheet">
 {% endfor %}
+
+<!-- Custom CSS -->
 <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css" />
