--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,16 +1,28 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<!-- Bootstrap 5 JS Bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<!-- jQuery (if needed for legacy code) -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+<!-- Custom page scripts -->
 {% for src in page.footer_scripts %}
 <script src="{{ src }}"></script>
 {% endfor %}
+
+<!-- Custom script for external links -->
 <script>
-$(function() {
-  $('a.new-window').click(function(evt) {
-    evt.preventDefault();
-    window.open(this.href, '_blank');
+document.addEventListener('DOMContentLoaded', function() {
+  // Handle external links
+  const externalLinks = document.querySelectorAll('a.new-window');
+  externalLinks.forEach(function(link) {
+    link.addEventListener('click', function(evt) {
+      evt.preventDefault();
+      window.open(this.href, '_blank', 'noopener,noreferrer');
+    });
   });
 });
 </script>
+
 {% if page.footer_script_include %}
-{% include {{page.footer_script_include}} %}
+{% include {{ page.footer_script_include }} %}
 {% endif %}
