--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:xlink="http://www.w3.org/1999/xlink">
+<html lang="en">
   <head>
     {% include head.html %}
   </head>
-  <body class="{{ page.title | handleize | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
+  <body class="{{ page.title | slugify | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
     {% include header.html %}
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div id="main" class="col-md-12">
-            {% if page.hide_default_heading %}
-            {% else %}
+        <main id="main" class="col-12">
+            {% unless page.hide_default_heading %}
             <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
-            {% endif %}
+            {% endunless %}
           {{ content }}
-        </div>
+        </main>
       </div>
     </div>
 
     {% include footer.html %}
-
     {% include scripts.html %}
   </body>
 </html>
