--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:xlink="http://www.w3.org/1999/xlink">
+<html lang="en">
   <head>
     {% include head.html %}
   </head>
-  <body class="{{ page.title | handleize | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
+  <body class="{{ page.title | slugify | downcase }}{% if page.body_class %} {{ page.body_class }}{% endif %}">
     {% include header.html %}
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
-        <div id="main" class="col-md-9">
-            {% if page.hide_default_heading %}
-            {% else %}
+        <main id="main" class="col-lg-9 col-md-8">
+            {% unless page.hide_default_heading %}
             <h1>{% if page.display_title %}{{ page.display_title }}{% else %}{{ page.title }}{% endif %}</h1>
-            {% endif %}
+            {% endunless %}
           {{ content }}
-        </div>
-        <aside id="sidebar" class="col-md-3">
+        </main>
+        <aside id="sidebar" class="col-lg-3 col-md-4">
           {% if page.sidebar_include %}
-          {% include {{page.sidebar_include}} %}
+          {% include {{ page.sidebar_include }} %}
           {% endif %}
         </aside>
       </div>
     </div>
 
     {% include footer.html %}
-
     {% include scripts.html %}
+    {% if page.footer_script_include %}
+      {% include {{ page.footer_script_include }} %}
+    {% endif %}
+    {% if page.github_config_include %}
+      {% include {{ page.github_config_include }} %}
+    {% endif %}
+    {% if page.additional_script_include %}
+      {% include {{ page.additional_script_include }} %}
+    {% endif %}
   </body>
 </html>
