--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,49 +1,47 @@
+// Modern navbar styling for Bootstrap 5
 .navbar {
-  /* Use a thinner header than the Bootstrap default of 40px */
-  min-height: 30px;
-
-  /* Get rid of bottom padding so there's no gap below logo */
-  margin-bottom: 0;
+  min-height: 60px;
+  box-shadow: 0 2px 4px rgba(0,0,0,.1);
 }
 
-.navbar-header:after {
-  clear: none;
+.navbar-nav.me-auto {
+  padding-left: 3rem;
 }
 
-.navbar-nav>li>a.external:before {
-  content: '> ';
+.navbar-brand {
+  font-weight: 600;
 }
 
-.navbar-icons>li {
-  float: left;
+.nav-link.external::before {
+  content: '↗ ';
+  opacity: 0.7;
 }
 
 #logo-wrapper {
-  padding: 30px 0;
-  margin-bottom: 20px;
-
+  padding: 2rem 0;
+  margin-bottom: 1.5rem;
   background-color: #dfd1cd;
 
   img {
     width: 100%;
     max-width: 371px;
+    height: auto;
   }
-
 }
 
-@media (min-width: 768px) {
-  .navbar-nav > li {
-    > a {
-      padding-top: 5px;
-      padding-bottom: 5px;
-    }
+// Responsive adjustments
+@media (min-width: 992px) {
+  .navbar-nav .nav-link {
+    padding: 0.5rem 1rem;
+  }
+  
+  .navbar-nav .nav-item:first-child .nav-link {
+    margin-left: -1rem;
+  }
+}
 
-    &:first-child > a {
-      margin-left: -15px;
-    }
-
-    &:last-child > a {
-      padding-right: 0;
-    }
+@media (max-width: 991px) {
+  .navbar-nav.me-auto {
+    padding-left: 1rem;
   }
 }
