fixed header logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-      <img src="https://docs.openelections.net/assets/brand/openelections-logo.jpg" alt="OpenElections" width="30" height="30" class="d-inline-block align-text-top">
+      <img src="{{ site.baseurl }}/img/logo.png" alt="OpenElections" width="30" height="30" class="d-inline-block align-text-top">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
