--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-      <img src="/favicon.ico" alt="OpenElections" width="30" height="30" class="d-inline-block align-text-top">
+      <img src="/img/icon.png" alt="OpenElections" width="30" height="30" class="d-inline-block align-text-top">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -57,9 +57,3 @@
     </div>
   </div>
 </nav>
-
-<div id="logo-wrapper" class="py-3">
-  <div class="container text-center">
-      <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/img/logo.png" alt="OpenElections logo" class="img-fluid"></a>
-  </div>
-</div>
